@@ -6,7 +6,7 @@ ltrace \- A library call tracer
 
 .SH SYNOPSIS
 .B ltrace
-.I "[-CfhiLrStttV] [-a column] [-A maxelts] [-D level] [-e expr] [-l filename] [-n nr] [-o filename] [-p pid] ... [-s strsize] [-u username] [-X extern] [-x extern] ... [--align=column] [--debug=level] [--demangle] [--help] [--indent=nr] [--library=filename] [--output=filename] [--version] [command [arg ...]]"
+.I "[-CfghiLrStttV] [-a column] [-A maxelts] [-D level] [-e expr] [-l filename] [-n nr] [-o filename] [-p pid] ... [-s strsize] [-u username] [-X extern] [-x extern] ... [--align=column] [--debug=level] [--demangle] [--help] [--indent=nr] [--library=filename] [--output=filename] [--version] [command [arg ...]]"
 
 .SH DESCRIPTION
 .B ltrace
@@ -23,7 +23,9 @@ Its use is very similar to
 .SH OPTIONS
 .TP
 .I \-a, \-\-align column
-Align return values in a specific column (default column is 5/8 of screen width).
+Align return values in a specific
+.IR column
+(default column is 5/8 of screen width).
 .TP
 .I \-A maxelts
 Maximum number of array elements to print before suppressing the rest with an ellipsis ("...")
@@ -81,6 +83,11 @@ Trace child processes as they are created by
 currently traced processes as a result of the fork(2)
 or clone(2) system calls.
 The new process is attached immediately.
+.TP
+.I \-g
+Do not place breakpoints on PLT entries. This option reduces
+the output of ltrace. This is commonly used to avoid tracing
+libc functions.
 .TP
 .I \-F
 Load an alternate config file. Normally, /etc/ltrace.conf and
